Updated mainlist to use list db, no items yet
