# backend/src/app.js
@@ -42,7 +42,7 @@ app.post('/v0/signup', users.postUser);
 // List Routes
 app.get('/v0/lists', lists.getLists);
 app.get('/v0/users_lists', lists.getUsersToLists);
-app.get('/v0/lists/:usr_id', lists.getUsersLists);
+app.get('/v0/lists/:usr_id', auth.check, lists.getUsersLists);
 app.post('/v0/lists/:usr_id', lists.newList);
 
 // User from list Routes
